--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -10,5 +10,6 @@
         app:srcCompat="@mipmap/ic_launcher"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:id="@+id/imageView" />
+        android:id="@+id/imageView"
+        android:contentDescription="@string/app_name" />
 </LinearLayout>
