--- a/app/src/main/res/layout/layout_personalform_two.xml
+++ b/app/src/main/res/layout/layout_personalform_two.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -41,6 +42,7 @@
                 android:hint="@string/Address"
                 android:imeOptions="actionNext"
                 android:inputType="text"
+                android:minHeight="48dp"
                 android:textColor="@color/default_text_color"
                 android:textColorHint="@color/default_text_color"
                 android:textSize="@dimen/text_size_12sp" />
@@ -51,7 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/padding_4dp"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -74,7 +77,10 @@
                     style="@style/onboardspinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/padding_4dp" />
+                    android:layout_marginTop="@dimen/padding_4dp"
+                    android:contentDescription="@string/app_name"
+                    android:minHeight="48dp"
+                   />
             </LinearLayout>
 
             <LinearLayout
@@ -96,7 +102,9 @@
                     android:id="@+id/spinner_cities"
                     style="@style/onboardspinner"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:contentDescription="@string/app_name"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -127,6 +135,7 @@
                 android:hint="@string/postalcode"
                 android:imeOptions="actionNext"
                 android:inputType="text"
+                android:minHeight="48dp"
                 android:textColor="@color/default_text_color"
                 android:textColorHint="@color/default_text_color"
                 android:textSize="@dimen/text_size_14sp" />
@@ -232,6 +241,7 @@
                     android:hint="@string/Address"
                     android:imeOptions="actionNext"
                     android:inputType="text"
+                    android:minHeight="48dp"
                     android:textColor="@color/default_text_color"
                     android:textColorHint="@color/default_text_color"
                     android:textSize="@dimen/text_size_12sp" />
@@ -243,7 +253,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/padding_4dp"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="2"
+                android:baselineAligned="false">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -266,7 +277,9 @@
                         style="@style/onboardspinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/padding_4dp" />
+                        android:layout_marginTop="@dimen/padding_4dp"
+                        android:minHeight="48dp"
+                        android:contentDescription="@string/app_name"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -289,7 +302,9 @@
                         style="@style/onboardspinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/padding_4dp" />
+                        android:layout_marginTop="@dimen/padding_4dp"
+                        android:minHeight="48dp"
+                        android:contentDescription="@string/app_name"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -320,6 +335,7 @@
                     android:hint="@string/postalcode"
                     android:imeOptions="actionNext"
                     android:inputType="text"
+                    android:minHeight="48dp"
                     android:textColor="@color/default_text_color"
                     android:textColorHint="@color/default_text_color"
                     android:textSize="@dimen/text_size_14sp" />
