--- a/app/src/main/res/layout/layout_travelform_one.xml
+++ b/app/src/main/res/layout/layout_travelform_one.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -34,7 +35,8 @@
                 android:fontFamily="@font/sfuitext_regular"
                 android:text="@string/yes"
                 android:textColor="@color/default_text_color"
-                android:textSize="@dimen/text_size_14sp" />
+                android:textSize="@dimen/text_size_14sp"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <RadioButton
                 android:layout_width="wrap_content"
@@ -162,50 +164,61 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerInParent="true"
-                android:layout_margin="@dimen/padding_4dp"
+                android:layout_marginStart="@dimen/padding_4dp"
+                android:layout_marginTop="@dimen/padding_4dp"
+                android:layout_marginEnd="@dimen/padding_4dp"
+                android:layout_marginBottom="@dimen/padding_4dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/sfuitext_regular"
-                android:textSize="@dimen/text_size_12sp"
                 android:background="@drawable/background_border"
+                android:fontFamily="@font/sfuitext_regular"
                 android:hint="@string/name"
                 android:inputType="text"
                 android:padding="@dimen/padding_8dp"
                 android:textColor="@color/default_text_color"
-                android:textColorHint="@color/default_text_color" />
+                android:textColorHint="@color/default_text_color"
+                android:textSize="@dimen/text_size_12sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/family_person_relation"
                 android:layout_width="@dimen/padding_120dp"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_margin="@dimen/padding_4dp"
-                android:fontFamily="@font/sfuitext_regular"
-                android:textSize="@dimen/text_size_12sp"
+                android:layout_marginStart="@dimen/padding_4dp"
+                android:layout_marginTop="@dimen/padding_4dp"
+                android:layout_marginEnd="@dimen/padding_4dp"
+                android:layout_marginBottom="@dimen/padding_4dp"
                 android:layout_toEndOf="@id/family_person_name"
                 android:layout_weight="1"
                 android:background="@drawable/background_border"
+                android:fontFamily="@font/sfuitext_regular"
                 android:hint="@string/name"
                 android:inputType="text"
                 android:padding="@dimen/padding_8dp"
                 android:textColor="@color/default_text_color"
-                android:textColorHint="@color/default_text_color" />
+                android:textColorHint="@color/default_text_color"
+                android:textSize="@dimen/text_size_12sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/family_person_age"
                 android:layout_width="@dimen/padding_60dp"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_margin="@dimen/padding_4dp"
-                android:fontFamily="@font/sfuitext_regular"
-                android:textSize="@dimen/text_size_12sp"
+                android:layout_marginStart="@dimen/padding_4dp"
+                android:layout_marginTop="@dimen/padding_4dp"
+                android:layout_marginEnd="@dimen/padding_4dp"
+                android:layout_marginBottom="@dimen/padding_4dp"
                 android:layout_toEndOf="@id/family_person_relation"
-                android:layout_weight="1"
                 android:background="@drawable/background_border"
+                android:fontFamily="@font/sfuitext_regular"
                 android:hint="@string/age"
                 android:inputType="number"
                 android:padding="@dimen/padding_8dp"
                 android:textColor="@color/default_text_color"
-                android:textColorHint="@color/default_text_color" />
+                android:textColorHint="@color/default_text_color"
+                android:textSize="@dimen/text_size_12sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
@@ -214,7 +227,8 @@
                 android:layout_centerInParent="true"
                 android:layout_marginEnd="@dimen/padding_4dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_add" />
+                android:src="@drawable/ic_add"
+                tools:ignore="ImageContrastCheck" />
         </RelativeLayout>
     </LinearLayout>
 
