--- a/app/src/main/res/layout/layout_update_grid_item.xml
+++ b/app/src/main/res/layout/layout_update_grid_item.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text_grid"
-            android:text="yfuyjifyfuyfufh"
+            android:text=""
             android:textAlignment="textEnd"
             android:gravity="center|end"
             android:layout_gravity="end"
